<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@+id/search_button"
        android:background="@drawable/activity_main_search_bar"
        android:weightSum="1">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/activity_main_search_bar"
            android:cursorVisible="false"
            android:hint="@string/search_hint"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:textColorHint="#fff"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/search_cancel_button"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/search_cancel" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/search_button" />

</RelativeLayout>