...

        <!-- DATE AND TIME PICKER-->
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignEnd="@+id/confirm_event_activity_confirm_button"
            android:layout_below="@+id/confirm_event_activity_title"
            android:layout_marginTop="0dp"
            android:background="@android:color/darker_gray" />

        <include
            android:id="@+id/confirm_event_activity_date_time"
...
